--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -162,13 +162,13 @@
                       <!-- Content -->
 
                       <div class="container-xxl flex-grow-1 container-p-y">
-                        <div class="row">
+                        <div class="row p-4">
 
                           <div class="col-lg-6 col-md-4 order-1">
                             <div class="row">
                               <div class="col-lg-6 col-md-12 col-6 mb-4">
-                                <div class="card">
-                                  <div class="card-body">
+                                <div class="card border">
+                                  <div class="card-body" style="background: #eef8ff;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/chart-success.png" alt="chart success"
@@ -185,8 +185,8 @@
                               </div>
 
                               <div class="col-lg-6 col-md-12 col-6 mb-4">
-                                <div class="card">
-                                  <div class="card-body">
+                                <div class="card border">
+                                  <div class="card-body" style="background: #eef8ff;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/wallet-info.png" alt="Credit Card"
@@ -194,10 +194,10 @@
                                       </div>
 
                                     </div>
-                                    <span>Sales</span>
-                                    <h3 class="card-title text-nowrap mb-1">₹ <%=totalSalesAmount%>
+                                    <span class="fw-semibold d-block mb-1">Sales</span>
+                                    <h3 class="card-title text-nowrap mb-2">₹ <%=totalSalesAmount%>
                                     </h3>
-                                    <!-- <small class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> +28.42%</small> -->
+                                   
                                   </div>
                                 </div>
                               </div>
@@ -208,8 +208,8 @@
                           <div class="col-12 col-md-8 col-lg-6 order-3 order-md-2">
                             <div class="row">
                               <div class="col-6 mb-4">
-                                <div class="card">
-                                  <div class="card-body">
+                                <div class="card border">
+                                  <div class="card-body" style="background: #eef8ff;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/users.png" style="width: 76px;"
