--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -167,8 +167,8 @@
                           <div class="col-lg-6 col-md-4 order-1">
                             <div class="row">
                               <div class="col-lg-6 col-md-12 col-6 mb-4">
-                                <div class="card border">
-                                  <div class="card-body" style="background: #eef8ff;">
+                                <div class="">
+                                  <div class="card-body" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/chart-success.png" alt="chart success"
@@ -185,8 +185,8 @@
                               </div>
 
                               <div class="col-lg-6 col-md-12 col-6 mb-4">
-                                <div class="card border">
-                                  <div class="card-body" style="background: #eef8ff;">
+                                <div class="">
+                                  <div class="card-body" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/wallet-info.png" alt="Credit Card"
@@ -208,8 +208,8 @@
                           <div class="col-12 col-md-8 col-lg-6 order-3 order-md-2">
                             <div class="row">
                               <div class="col-6 mb-4">
-                                <div class="card border">
-                                  <div class="card-body" style="background: #eef8ff;">
+                                <div class="">
+                                  <div class="card-body" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/users.png" style="width: 76px;"
