--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -163,91 +163,54 @@
 
                       <div class="container-xxl flex-grow-1 container-p-y">
                         <div class="row p-4">
-
-                          <div class="col-lg-6 col-md-4 order-1">
-                            <div class="row">
-                              <div class="col-lg-6 col-md-12 col-6 mb-4">
-                                <div class="">
-                                  <div class="card-body" style="background: #eef8ff; border-radius: 10px;">
+                          <div class="col-lg-12 col-md-4 order-1 d-flex justify-content-center">
+                           
+                              <div class="col-lg-3 col-md-6 col-6 mb-4">
+                                  <div class="card-body pt-1" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/chart-success.png" alt="chart success"
                                           class="rounded" />
                                       </div>
-                                      
                                     </div>
                                     <span class="fw-semibold d-block mb-1">Total products variations</span>
                                     <h3 class="card-title mb-2">QTY : <%=totalproductsvariation[0].total%>
                                     </h3>
-
                                   </div>
-                                </div>
                               </div>
 
-                              <div class="col-lg-6 col-md-12 col-6 mb-4">
-                                <div class="">
-                                  <div class="card-body" style="background: #eef8ff; border-radius: 10px;">
+                              <div class="col-lg-3 col-md-12 col-6 mb-4">
+                                  <div class="card-body pt-1" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/wallet-info.png" alt="Credit Card"
                                           class="rounded" />
                                       </div>
-
                                     </div>
                                     <span class="fw-semibold d-block mb-1">Sales</span>
                                     <h3 class="card-title text-nowrap mb-2">₹ <%=totalSalesAmount%>
                                     </h3>
-                                   
                                   </div>
-                                </div>
                               </div>
-                            </div>
-                          </div>
-
-
-                          <div class="col-12 col-md-8 col-lg-6 order-3 order-md-2">
-                            <div class="row">
-                              <div class="col-6 mb-4">
-                                <div class="">
-                                  <div class="card-body" style="background: #eef8ff; border-radius: 10px;">
+                              <div class="col-lg-3 col-md-12 col-6 mb-4">
+                                  <div class="card-body pt-1" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
                                         <img src="/admin/assets/img/icons/unicons/users.png" style="width: 76px;"
                                           alt="Credit Card" class="rounded" />
                                       </div>
-
                                     </div>
                                     <span class="d-block mb-1">Total active users </span>
                                     <h3 class="card-title text-nowrap mb-2">
                                       <%=totalActiveUsers%>
                                     </h3>
                                   </div>
-                                </div>
                               </div>
-                              <!-- <div class="col-6 mb-4">
-                      <div class="card">
-                        <div class="card-body">
-                          <div class="card-title d-flex align-items-start justify-content-between">
-                            <div class="avatar flex-shrink-0">
-                              <img src="/admin/assets/img/icons/unicons/cc-primary.png" alt="Credit Card" class="rounded" />
-                            </div>
-                          </div>
-                          <span class="fw-semibold d-block mb-1">Transactions</span>
-                          <h3 class="card-title mb-2">$14,857</h3>
-                          
-                        </div>
-                      </div>
-                    </div> -->
-                              <!-- </div>
-    <div class="row"> -->
-
-                            </div>
                           </div>
                         </div>
 
                         <div class="fluid-container p-3">
                           <div class="border rounded p-3">
-
                             <select id="filter" class="form-select p-3 fs-5 fw-bold border-primary">
                               <option value="year">Yearly</option>
                               <option value="month">Monthly</option>
