--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -169,12 +169,12 @@
                                   <div class="card-body pt-1" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
-                                        <img src="/admin/assets/img/icons/unicons/chart-success.png" alt="chart success"
-                                          class="rounded" />
+                                        <img src="/admin/assets/img/icons/unicons/products-2.png" style="width: 76px;" alt="chart success"
+                                          class="rounded p-1" />
                                       </div>
                                     </div>
                                     <span class="fw-semibold d-block mb-1">Total products variations</span>
-                                    <h3 class="card-title mb-2">QTY : <%=totalproductsvariation[0].total%>
+                                    <h3 class="card-title mb-2"><%=totalproductsvariation[0].total%>
                                     </h3>
                                   </div>
                               </div>
@@ -183,7 +183,7 @@
                                   <div class="card-body pt-1" style="background: #eef8ff; border-radius: 10px;">
                                     <div class="card-title d-flex align-items-start justify-content-between">
                                       <div class="avatar flex-shrink-0">
-                                        <img src="/admin/assets/img/icons/unicons/wallet-info.png" alt="Credit Card"
+                                        <img src="/admin/assets/img/icons/unicons/sales-3.png" style="width: 76px;" alt="Credit Card"
                                           class="rounded" />
                                       </div>
                                     </div>
