--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -34,51 +34,7 @@
 
 <body>
     <div class="page-wrapper">
-      <header class="header header-intro-clearance header-4">
-        
-    
-        <div class="header-middle">
-            <div class="container">
-                <div class="header-left">
-                    <button class="mobile-menu-toggler">
-                        <span class="sr-only"></span>
-                        <i class="icon-bars"></i>
-                    </button>
-                    
-                    <a href="/" class="logo">
-                        <img src="/assets/images/logo.png" alt="Molla Logo" width="165" height="52">
-                    </a>
-                </div><!-- End .header-left -->
-    
-                <div class="header-center">
-                    <div class="header-search header-search-extended header-search-visible d-none d-lg-block">
-                        <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
-                        <form action="#" method="get">
-                            <div class="header-search-wrapper search-wrapper-wide">
-                                <label for="q" class="sr-only"></label>
-                                <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
-                                <input type="search" class="form-control" name="q" id="q" placeholder="Search product ..." required>
-                            </div><!-- End .header-search-wrapper -->
-                        </form>
-                    </div><!-- End .header-search -->
-                </div>
-    
-                <div class="header-right">
-                    <div class="dropdown compare-dropdown">
-                        <a href="/admin/profile" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" data-display="static" title="Profile" aria-label="Profile">
-                            <div class="icon">
-                                <i class="icon-user"></i>
-                                <p>Profile</p>
-                            </div>
-                        </a>
-                    </div>
-                    
-                </div><!--End .header-right -->
-            </div><!--End .container -->
-        </div> <!--End .header-middle-->
-    
-        
-    </header><!-- End .header -->
+        <%- include('partials/header.ejs')%>
 
         <main class="main bg-light">
         	
