--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -166,6 +166,7 @@
                           </div>
 
                           <div class="fluid-container p-3">
+                            <h3 class="text-center fw-bold">Sales Chart</h3>
                             <div class="border rounded p-3">
                               <select id="filter" class="form-select p-3 fs-5 fw-bold border-primary">
                                 <option value="year">Yearly</option>
@@ -234,7 +235,7 @@
                                     <% for (let item of topCategories){ let number=topCategories.indexOf(item)+1; %>
                                       <li class="d-flex pb-2 ">
                                         <div class="d-flex w-100 align-items-center justify-content-center">
-                                          <div class=" col-2">
+                                          <div class=" col-4">
                                             <span class="">
                                               <%=number%>.
                                             </span>
@@ -244,7 +245,7 @@
                                               <%=item.categoriesDetails.name%>
                                             </span>
                                           </div>
-                                          <div class=" col-3">
+                                          <div class=" col-4">
                                             <span class="fw-bold">
                                               <%=item.categorySalesQty%>
                                             </span>
